deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: real-estate-prediction
spec:
  replicas: 1
  selector:
    matchLabels:
      app: real-estate-prediction
  template:
    metadata:
      labels:
        app: real-estate-prediction
    spec:
      containers:
      - name: real-estate-prediction
        image: kianilanluo/real-estate-prediction:v2
        # imagePullPolicy: Never
        ports:
        - containerPort: 5002
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
