service.yaml
apiVersion: v1
kind: Service
metadata:
  name: real-estate-prediction
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 5002
  selector:
    app: real-estate-prediction
