network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-external-access
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: real-estate-prediction
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0  # Allows traffic from any IP address
    ports:
    - protocol: TCP
      port: 5002  # The port your application is listening on inside the container
    - protocol: TCP
      port: 80    # The port for HTTP
    - protocol: TCP
      port: 443   # The port for HTTPS
